# paradise

./: .dir-locals.el  .gitignore  LICENSE  Makefile  README.md  compile  jcc.cabal  jlang.cabal  main.c  package.yaml  parac.cabal  samples_asm_read.s  stack.yaml  stdlib_io.s
app/: Main.hs
bench/: primes.c
opencl/: setup.c
samples/asm/: asm.para  read.para  syscall.para  write.para
samples/basic/: add.al  add.para  div.al  div.c  div.para  mul.al  mul.c  mul.para  sub.al  sub.c  sub.para  test.c
samples/flow/: if.al  if.c  if.para  if2.al  if2.c  if2.para  while1.al  while1.c  while1.para
samples/func/: func.al  func.c  func.para  func2.al  func2.para  recursion.al  recursion.para
samples/include/: inc.al  inc.para  includer.para  print.al
samples/inference/: add.para  err1.para
samples/io/: print.al  readFile.para
samples/memory/: arr.al  arr.c  arr.para  arr2.al  arr2.para  arr3.al  arr3.para  arr4.para  arrFunc.para  arrLit.para
samples/opencl/: kernel1.al  kernel1.para  kernel2.para  kernel3.para
samples/opencl/kernels/: saxpy.cl
samples/print/: print.jl
samples/strings/: str.al  str.para
samples/strings/sugar/: arrs.para
samples/types/: case_rec.para  case_union.para  rec.para  union.para
src/: Addresser.hs  Args.hs  Asm.hs  BasicBlocks.hs  Canonicalizer.hs  CodeGen.hs  Codegen.hs  Compile.hs  ConstantFolder.hs  Driver.hs  GenC.hs  GenCL.hs  GenCState.hs  GenIR.hs  GenLLVM.hs  Grapher.hs  Importer.hs  Lexer.x  Offsets.hs  Optimize.hs  Parser.hs  Parser.y  Preprocessor.hs  Reachability.hs  Registers.hs  Resolver.hs  Semantic.hs  Syntax.hs  TAC.hs  Typer.hs  Types.hs  Weeder.hs
src/Ast/: AddressedAst.hs  CAst.hs  OffsetAst.hs  OpenCLAst.hs  ParsedAst.hs  ResolvedAst.hs  TypedAst.hs  WeededAst.hs
src/Errors/: CompileError.hs  ImporterError.hs  InternalCompileError.hs  ParseError.hs  ResolverError.hs  TypeError.hs  WeederError.hs
src/Lib/: Asm.hs  Blocks.hs  Format.hs  Graph.hs  IR.hs  Llvm.hs  SymbolTable.hs  Types.hs
stdlib/: io.S  io.al  io.para  runtime.S  string.para  syscall.para  unsafe.para
test/: FormatSpec.hs  ProgramSpec.hs  SemanticSpec.hs  Spec.hs  Testing.hs  TyperSpec.hs  WeederSpec.hs  test.jl
test/Language/Arithmetic/: ArithSpec.hs
test/Language/Arrays/: ArraySpec.hs
test/Language/Asm/: AsmSpec.hs
test/Language/ControlFlow/: ControlFlowSpec.hs
test/Language/Functions/: FunctionSpec.hs
test/Language/IO/: IoSpec.hs
test/Language/Inference/: InferenceSpec.hs
test/Language/Modules/: ModuleSpec.hs
test/Language/OpenCL/: OpenCLSpec.hs
test/Language/Strings/: StringSpec.hs
test/Language/Types/: TypesSpec.hs
