name:                jcc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jmittert/jcc#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Mittertreiner
maintainer:          jason.mittertreiner@gmail.com
copyright:           gplv3
category:            Undefined
build-type:          Simple
extra-source-files: README.md
                    src/Parser.y
                    src/Lexer.x

cabal-version:       >=1.10

library
  build-tools: alex, happy
  hs-source-dirs:      src
  exposed-modules: Lexer
                 , Parser
                 , Importer
                 , Weeder
                 , Resolver
                 , Typer
                 , Addresser
                 , Canonicalizer
                 , ConstantFolder
                 , BasicBlocks
                 , GenIR
                 , Codegen
                 , Compile
                 , Ast.ResolvedAst
                 , Ast.TypedAst
                 , Ast.ParsedAst
                 , Ast.WeededAst
                 , Ast.AddressedAst
                 , Lib.Graph
                 , Lib.SymbolTable
                 , Lib.IR
                 , Lib.Asm
                 , Lib.Types
  build-depends:       array
                     , base >= 4.7 && < 5
                     , containers
                     , either
                     , hspec
                     , mtl
                     , transformers >= 0.5.2.0
                     , directory
  default-language:    Haskell2010

executable jcc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-name-shadowing
  build-depends:       base
                     , hspec
                     , jcc
                     , process
                     , transformers >= 0.5.2.0
                     , argparser >= 0.3.4
  default-language:    Haskell2010

test-suite jcc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , jcc
                     , mtl
                     , transformers
                     , process
  other-modules:       ProgramSpec
                       WeederSpec
                       TyperSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-name-shadowing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jmittert/jcc
