name:                jlang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jmittert/jlang#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Mittertreiner
maintainer:          jason.mittertreiner@gmail.com
copyright:           gplv3
category:            Undefined
build-type:          Simple
extra-source-files: README.md
                    src/Parser.y
                    src/Lexer.x

cabal-version:       >=1.10

library
  build-tools: alex, happy
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Syntax
                     , Lexer
                     , Parser
                     , TAC
                     , Semantic
                     , Types
                     , CodeGen
                     , Optimize
                     , Asm
  build-depends:       base >= 4.7 && < 5
                     , array
                     , mtl
                     , containers
  default-language:    Haskell2010

executable jlc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jlang
  default-language:    Haskell2010

test-suite jlang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jlang
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jmittert/jlang
